# ip-inventory-api

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
config/: config.json
sql/: 001_schema.sql
src/: main.cpp
src/controllers/: IpInventoryController.cpp  IpInventoryController.h
src/db/: Db.cpp  Db.h
src/jobs/: ReservationCleanupJob.cpp  ReservationCleanupJob.h
src/models/: ApiDtos.h  JsonConverters.h
src/services/: IpInventoryService.cpp  IpInventoryService.h
src/utils/: Validation.h
swagger/: openapi.yaml  swagger-initializer.js
tests/: ValidationTests.cpp
web/: index.html
